# Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Concurency.md  README.md  Structure.md  vcpkg.json
cmake/: CompilerSettings.cmake  FindHWlock.cmake
docs/: Doxyfile.in  generate_docs.py  server_architecture.md
include/: include.hpp
lib/: CMakeLists.txt
lib/CoreAlgorithmsDS/: CMakeLists.txt
lib/CoreAlgorithmsDS/cmake/: LibraryCompilerSettings.cmake  LibraryExportSettings.cmake  LibraryInstallSettings.cmake  LibraryLinkageSettings.cmake
lib/CoreConcurency/: CMakeLists.txt
lib/CoreConcurency/cmake/: LibraryCompilerSettings.cmake  LibraryExportSettings.cmake  LibraryInstallSettings.cmake  LibraryLinkageSettings.cmake  libConfig.cmake.in
lib/CoreConcurency/include/: IOScheduler.hpp  include.hpp
lib/CoreConcurency/src/: CMakeLists.txt  lib.cpp
lib/CoreMath/: CMakeLists.txt
lib/CoreMath/cmake/: LibraryCompilerSettings.cmake  LibraryExportSettings.cmake  LibraryInstallSettings.cmake  LibraryLinkageSettings.cmake  libConfig.cmake.in
lib/CoreMath/include/: aallocator.hpp  concepts.hpp  diffeq.hpp  matrix.hpp  noise.hpp  tensor.hpp  vector.hpp
lib/CoreMath/include/API/: diffeq_api.hpp  geometry_api.hpp  matrix_api.hpp  noise_api.hpp  tensor_api.hpp  vector_api.hpp
lib/CoreMath/include/geometry/: geometry.hpp
lib/CoreMath/include/noise/: FastNoiseLite.h  billow_noise.hpp  curl_noise.hpp  dw_noise.hpp  fast_noise_adapter.hpp  gabor_noise.hpp  noise_utils.hpp  perlin_noise.hpp  pink_noise.hpp  rigded_noise.hpp  simplex_noise.hpp  value_noise.hpp  voronoi_noise.hpp  whte_noise.hpp  worley_noise.hpp
lib/CoreMath/include/parallel/: diffeq_p.hpp  parallel_executor.hpp
lib/CoreMath/src/: CMakeLists.txt  lib.cpp
lib/CoreMeta/: CMakeLists.txt
lib/CoreMeta/cmake/: LibraryCompilerSettings.cmake  LibraryExportSettings.cmake  LibraryInstallSettings.cmake  LibraryLinkageSettings.cmake  libConfig.cmake.in
lib/CoreMeta/include/: concepts.hpp  dynamic_optional.hpp  include.hpp  meta.hpp  meta_funcs.hpp  meta_utils.hpp  reflection.hpp  type_signature.hpp  type_traits.hpp
lib/CoreMeta/include/concepts/: aggregate_concepts.hpp  associative_container_concepts.hpp  basic_concepts.hpp  comparasion_concepts.hpp  container_concepts.hpp  container_of_concepts.hpp  converting_concepts.hpp  function_concepts.hpp  iterator_concepts.hpp  map_container_concepts.hpp  optional_concepts.hpp  utility_concepts.hpp
lib/CoreMeta/include/meta_functions/: meta_algorithms.hpp  meta_funcs.hpp  meta_functions.hpp  meta_utils.hpp  templates_meta_utils.txt  transfer.hpp
lib/CoreMeta/include/smart_cast/: smart_cast.hpp
lib/CoreMeta/include/traits/: type_traits.hpp
lib/CoreMeta/src/: CMakeLists.txt  lib.cpp
lib/CoreUI/: CMakeLists.txt
lib/CoreUI/cmake/: LibraryCompilerSettings.cmake  LibraryExportSettings.cmake  LibraryInstallSettings.cmake  LibraryLinkageSettings.cmake  libConfig.cmake.in
lib/CoreUI/include/: imgui_wrapper.hpp
lib/CoreUI/src/: CMakeLists.txt  imgui_wrapper.cpp
lib/CoreUtils/: slice.hpp
lib/tests/CoreMath_test/: CMakeLists.txt  lib_test.cpp
lib/tests/CoreMeta_test/: CMakeLists.txt  lib_test.cpp
shaders/: shaders.frag
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
